hphp/test/slow/async/invoke.php.expectf
Fatal error: cannot declare constructors and magic methods such as '__invoke' async in %s/invoke.php on line 4
